# pyblog

./: .env  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  POSTS.md  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.dev/: release.md
.git-filter-venv/: pyvenv.cfg
.github/: CODEOWNERS  branch_protection.md
.github/workflows/: automerge-strict.yml  ci-full.yml  ci.yml  gh-pages-deploy.yml  gh-pages.yml  release.yml
404/: index.html
about/: index.html
admin/: README.md  app.py
admin-archive/: README.md  app.py  app.py.txt
admin-archive/templates/: new_post.html  pr_status.html
admin/templates/: new_post.html  pr_status.html
assets/stylesheets/: extra.css
blog/: index.html
docs/: 404.md  about.md  index.md  zk-journal.md
docs/blog/: index.md
docs/posts/: 2026-02-07-test-post.md  2nd-pyblog-post.md  _post-template.md  another-post.md  first-post.md  hello-world.md  log-sieve-p1.md  log-sieve-p2.md  log-sieve-p3.md  metadata-stripper-p1.md  metadata-stripper-p2.md  metadata-stripper-p3.md  origin-miner-case-study.md  yet-another-post.md
docs/projects/: origin-miner.md
docs/tags/: example.md
newsfragments/: 0001.example.feature
overrides/: main.html  tags.html
posts/2026-02-07-test-post/: index.html
posts/2nd-pyblog-post/: index.html
posts/_post-template/: index.html
posts/another-post/: index.html
posts/first-post/: index.html
posts/hello-world/: index.html
posts/log-sieve-p1/: index.html
posts/log-sieve-p2/: index.html
posts/log-sieve-p3/: index.html
posts/metadata-stripper-p1/: index.html
posts/metadata-stripper-p2/: index.html
posts/metadata-stripper-p3/: index.html
posts/origin-miner-case-study/: index.html
scripts/: generate_index.py  new_post.py
search/: search_index.json
tags/example/: index.html
tests/: test_import.py  test_smoke.py
tools/: log_sieve.py  stripper.py
zk-journal/: index.html
(+3 files in other folders)
