[tool.poetry]
name = "pyblog"
version = "0.1.0"
description = "PyBlog — developer blog built with Django, Poetry, and Tailwind. Owned and taught line-by-line."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pyblog", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=4.2,<5.0"
gunicorn = {version = ">=20.0.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^24.1.0"
ruff = "^0.4.0"
isort = "^5.12.0"
pytest = "^7.0"
pytest-cov = "^4.0"
pre-commit = "^3.4.0"
pip-audit = "^2.0.0"
commitizen = "^2.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "towncrier (>=25.8.0,<26.0.0)"
]
