[tool.poetry]
name = "pyblog"
version = "0.0.0"
description = "PyBlog — developer blog project."
authors = ["Joe <joe@example.com>"]
readme = "README.md"
packages = [{ include = "pyblog", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
Django = ">=4.2,<5.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
commitizen = "^4.13.5"
towncrier = "^25.8.0"
pre-commit = "^3.4.0"
black = "^24.1.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.0"
pip-audit = "^2.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v{version}"
version_files = ["pyproject.toml"]

[tool.towncrier]
package = "pyblog"
directory = "newsfragments"
filename = "CHANGELOG.md"
draft = false

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
